<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userData"
            type="com.e.userprofileexample.UserData" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ic_launcher_background"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/user_profile_image"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            app:srcCompat="@drawable/user_profile_image" />

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@{userData.name}"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            tools:text="@string/barry_allen" />

        <EditText
            android:id="@+id/status_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/status_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp" />

        <Button
            android:id="@+id/status_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/update_status" />

        <TextView
            android:id="@+id/status_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:paddingBottom="@dimen/padding"
            android:text="@{userData.status}"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/bio_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:paddingStart="@dimen/padding"
                android:paddingEnd="@dimen/padding"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/bio_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:lineSpacingMultiplier="1.2"
                    android:paddingTop="@dimen/padding"
                    android:text="@string/bio_text"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/seatingChart_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/office_seating_chart"
                    android:paddingTop="@dimen/padding"
                    android:paddingBottom="@dimen/padding"
                    app:srcCompat="@drawable/user_seating_image" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>